Milestone 3
Finished Milestone 3 + react front-end build out
